--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Users post suggestions and comments on heir favourite products.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "echo \"Error: no test specified\" && exit 1"
     
   },
   "repository": {
