--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Users post suggestions and comments on heir favourite products.",
   "main": "index.js",
   "scripts": {
+	"start":"node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
-    
   },
   "repository": {
     "type": "git",
@@ -16,16 +16,5 @@
   "bugs": {
     "url": "https://github.com/Yanguya995/suggestion-box/issues"
   },
-  "homepage": "https://github.com/Yanguya995/suggestion-box#readme",
-  "dependencies": {
-    "body-parser": "^1.17.2",
-    "cors": "^2.8.4",
-    "express": "^4.15.4",
-    "mongodb": "^2.2.31",
-    "mongoose": "^4.11.8",
-    "nodemon": "^1.11.0"
-  },
-  "devDependencies": {
-    "@angular/cli": "^1.3.1"
-  }
-}
+  "homepage": "https://github.com/Yanguya995/suggestion-box#readme"
+ }
