--- a/package.json
+++ b/package.json
@@ -19,10 +19,13 @@
   "homepage": "https://github.com/Yanguya995/suggestion-box#readme",
   "dependencies": {
     "body-parser": "^1.17.2",
+    "bower": "^1.8.2",
     "cors": "^2.8.4",
     "express": "^4.15.4",
     "hoek": "^4.2.0",
     "jsonwebtoken": "^7.4.3",
-    "mongoose": "^4.11.9"
+    "mongoose": "^4.11.9",
+    "passport": "^0.4.0",
+    "passport-jwt": "^3.0.0"
   }
 }
